course response box overlap fix

--- a/components/MessageBoard/MessageBoard.css
+++ b/components/MessageBoard/MessageBoard.css
@@ -45,7 +45,8 @@
   /* width: 85%;
   left: 50px; */
   margin-left: 30px;
-  bottom: 50px;
+  /* bottom: 50px; */
+  top: 2rem;
 }
 
 .customToolbar {
